# dash-express

./: .gitignore  404.html  LICENSE  README.md  app.py  index.html  mkdocs.yml  pyproject. toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test.py
authors/: index.html
dash_express/: __init__.py  _app_shell.py  _page.py  preview_chart.py  version.py
dash_express/filters/: __init__.py  autofilter.py  filterfunc.py
dash_express/kpi/: __init__.py
docs/: authors.md  index.md  installation.md  performance.md  quickstart.md
docs/exemples/: Optimization exemple.md
docs/fundamentals/: Add data.md  Create app.md  Visualization.md  filters.md
fundamentals/Add data/: index.html
fundamentals/Create app/: index.html
fundamentals/Visualization/: index.html
fundamentals/filters/: index.html
installation/: index.html
pages/: V.py  __init__.py  ddu.py  exposition.py  home.py
performance/: index.html
quickstart/: index.html
search/: search_index.json
