[metadata]
name = dash_express
version = 1.0.0
author = Kirill Stepanov
author_email = stpnv.kirill.o@gmail.com
description = ''
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stpnvkirill/dash-express
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True